# gamelog

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  game.py  games.db  games.xml  main.py  pyproject.toml  util.py  xml_to_json.py
path/tests/: test_main.py
templates/: create_form.html  edit_game.html  filter_section.html  games.html  index.html  view_game.html
tests/: test_main.py
