[project]
name = "gamelog"
version = "0.1.0"
description = ""
authors = [
    {name = "mcgillij",email = "mcgillivray.jason@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "xmltodict (>=0.14.2,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

